--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,25 +1,8 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html {
+  scroll-behavior: smooth;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-}
+@custom-variant dark (&:where(.dark, .dark *));
 
-/*
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-  */
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-}
